# crema

./: AGENTS.md  CLAUDE.md  Cargo.toml  IMAGE_ADJUSTMENTS.md  README.md
.github/workflows/: ci.yml
assets/: icon.icns
crates/crema-catalog/: Cargo.toml
crates/crema-catalog/src/: db.rs  import.rs  models.rs
crates/crema-core/: Cargo.toml
crates/crema-core/benches/: pipeline.rs
crates/crema-core/src/: color.rs  image_buf.rs  lib.rs  raw.rs
crates/crema-core/src/pipeline/: auto_enhance.rs  mod.rs  module.rs
crates/crema-core/src/pipeline/modules/: crop.rs  hsl.rs  lens_correction.rs  mod.rs  noise_reduction.rs  saturation.rs  sharpening.rs  split_tone.rs  tone_curve.rs  vibrance.rs  white_balance.rs
crates/crema-gpu/: Cargo.toml
crates/crema-gpu/shaders/: crop.wgsl  exposure.wgsl  hsl.wgsl  lens_correction.wgsl  saturation.wgsl  sharpen_blur.wgsl  sharpen_combine.wgsl  split_tone.wgsl  tone_curve.wgsl  vibrance.wgsl  white_balance.wgsl
crates/crema-gpu/src/: context.rs  pipeline.rs  shader.rs  texture.rs
crates/crema-metadata/: Cargo.toml
crates/crema-metadata/src/: exif.rs
crates/crema-thumbnails/: Cargo.toml
crates/crema-thumbnails/src/: cache.rs  generator.rs  lib.rs
crates/photors-catalog/: Cargo.toml
crates/photors-catalog/src/: db.rs  import.rs  lib.rs  models.rs
crates/photors-core/: Cargo.toml
crates/photors-core/src/: image_buf.rs  raw.rs
crates/photors-core/src/pipeline/modules/: crop.rs  exposure.rs  white_balance.rs
crates/photors-gpu/: Cargo.toml
crates/photors-gpu/src/: context.rs  lib.rs  pipeline.rs  texture.rs
crates/photors-metadata/: Cargo.toml
crates/photors-metadata/src/: exif.rs
crates/photors-thumbnails/: Cargo.toml
crates/photors-thumbnails/src/: cache.rs  generator.rs
src/: app.rs  icon.rs  main.rs  menu.rs
src/views/: darkroom.rs  lighttable.rs  mod.rs  unified.rs
src/widgets/: date_sidebar.rs  edit_panel.rs  filmstrip.rs  histogram.rs  metadata_panel.rs  mod.rs  thumbnail_grid.rs  zoomable_image.rs
