[package]
name = "crema-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
rawler = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
